Fix gap in foldout on app

--- a/src/components/common/layouts/header/menu/foldout/foldout.module.scss
+++ b/src/components/common/layouts/header/menu/foldout/foldout.module.scss
@@ -23,15 +23,16 @@
   overflow-y: auto;
   display: grid;
   position: fixed;
-  padding-top: $gaps-gap-4;
-  padding-bottom: $gaps-gap-4;
+  padding-top: calc(16px + var(--headerHeight));
+  padding-bottom: 16px;
   background: $colors-monochrome-1;
   color: $colors-main;
   --color-icon: #{$colors-main};
   z-index: 19;
   top: 0px;
   left: 0px;
-  bottom: var(--headerHeight);
+  // bottom: var(--headerHeight);
+  bottom: 0px;
   width: 100%;
   transform: translateY(-100%);
   transition: transform 400ms ease-out;
@@ -41,7 +42,8 @@
   // }
 
   &.open {
-    transform: translateY(calc(0px + var(--headerHeight)));
+    // transform: translateY(calc(0px + var(--headerHeight)));
+    transform: translateY(0px);
   }
 
   > div {
